force-app/main/default/objects/Matricula_Account_Benefit_Id__c/Matricula_Account_Benefit_Id__c.object-meta.xml
<CustomObject>
    <label>Temporal Matricula</label>
    <nameField>
        <label>Temporal Matriculas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Matriculas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>