force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Temporal Matriculas</relationshipLabel>
    <relationshipName>Temporal_Matriculas</relationshipName>
    <type>Lookup</type>
</CustomField>