force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Descripcion_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Error__c</fullName>
    <label>Descripcion Error</label>
    <type>TextArea</type>
</CustomField>