force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Fecha_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga__c</fullName>
    <label>Fecha Carga</label>
    <type>Date</type>
</CustomField>