force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Fecha_Ultima_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Carga__c</fullName>
    <label>Fecha_Ultima_Carga</label>
    <type>DateTime</type>
</CustomField>