force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/LU__c.field-meta.xml
<CustomField>
    <fullName>LU__c</fullName>
    <label>LU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>