force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_ANO__c.field-meta.xml
<CustomField>
    <fullName>MM_ANO__c</fullName>
    <label>MM_ANO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>