force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_ANUFEC__c.field-meta.xml
<CustomField>
    <fullName>MM_ANUFEC__c</fullName>
    <label>MM_ANUFEC</label>
    <type>Date</type>
</CustomField>