force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_ANUOPE__c.field-meta.xml
<CustomField>
    <fullName>MM_ANUOPE__c</fullName>
    <label>MM_ANUOPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>