force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_ANUPROP__c.field-meta.xml
<CustomField>
    <fullName>MM_ANUPROP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MM_ANUPROP</label>
    <type>Checkbox</type>
</CustomField>