force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_FECPRE__c.field-meta.xml
<CustomField>
    <fullName>MM_FECPRE__c</fullName>
    <label>MM_FECPRE</label>
    <type>Date</type>
</CustomField>