force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_IMPORTE__c.field-meta.xml
<CustomField>
    <fullName>MM_IMPORTE__c</fullName>
    <label>MM_IMPORTE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>