force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>MM_NIVEL__c</fullName>
    <label>MM_NIVEL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>