force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_SALDO_COBPAG__c.field-meta.xml
<CustomField>
    <fullName>MM_SALDO_COBPAG__c</fullName>
    <label>MM_SALDO_COBPAG</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>