force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/MM_SUPERA__c.field-meta.xml
<CustomField>
    <fullName>MM_SUPERA__c</fullName>
    <label>MM_SUPERA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>