force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Salesforce_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_Id__c</fullName>
    <label>Salesforce_Account_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>