force-app/main/default/objects/Matricula_Account_Benefit_Id__c/fields/Tipo_Error__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Error__c</fullName>
    <label>Tipo Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Encontrado</fullName>
            </value>
            <value>
                <fullName>Inconsistencia Datos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>