force-app/main/default/objects/Matricula_Account_Benefit_Id__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>MM_ALUMNO__c</columns>
    <columns>MM_ANO__c</columns>
    <columns>MM_CURSO__c</columns>
    <columns>MM_NIVEL__c</columns>
    <columns>MM_IMPORTE__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Salesforce_Account_Id__c</columns>
    <columns>Salesforce_Benefit_Id__c</columns>
    <columns>Fecha_Carga__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>